feat: Enhance SEO and meta tags
Adds comprehensive meta tags to `index.html` for improved search engine visibility and social sharing. This includes `description`, `keywords`, `author`, `robots`, and Open Graph tags.

Also updates `constants.tsx` with more detailed and privacy-focused footer text, emphasizing that checks are performed client-side with no data collection. The `privacy_badge` is introduced.

Dependency order in `package.json` and `tsconfig.json` is adjusted for consistency.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TongLeMa</title>
+    
+    <title>TongLeMa (通了吗) - Global Service Connectivity Monitor</title>
+    <meta name="description" content="TongLeMa is a real-time dashboard to check connectivity and latency to global services like Google, ChatGPT, GitHub, and more directly from your browser. No backend tracking." />
+    <meta name="keywords" content="connectivity check, ping test, network monitor, google blocked, china firewall, latency test, tonglema, 通了吗, 翻墙测试" />
+    <meta name="author" content="Magicx.dev" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="TongLeMa (通了吗) - Is it connected?" />
+    <meta property="og:description" content="Real-time network connectivity visualization for global services." />
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -77,8 +88,8 @@
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
-    "framer-motion": "https://aistudiocdn.com/framer-motion@^12.23.24"
+    "framer-motion": "https://aistudiocdn.com/framer-motion@^12.23.24",
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0"
   }
 }
 </script>
