feat: Add dynamic meta tags and translations
Implement dynamic meta tags (title, description, keywords) for SEO and add translated meta tags for English and Chinese locales. The document title and meta tags will now update based on the selected language.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title>TongLeMa (通了吗) - Global Service Connectivity Monitor</title>
-    <meta name="description" content="TongLeMa is a real-time dashboard to check connectivity and latency to global services like Google, ChatGPT, GitHub, and more directly from your browser. No backend tracking." />
-    <meta name="keywords" content="connectivity check, ping test, network monitor, google blocked, china firewall, latency test, tonglema, 通了吗, 翻墙测试" />
+    <title>TongLeMa (通了吗) - ChatGPT/Google/YouTube 代理网络状态与延迟检测</title>
+    <meta name="description" content="TongLeMa.com (通了吗) 实时检测您的代理网络连通性和延迟。彩色网格热力图，一秒判断 Google, ChatGPT, YouTube, Netflix 状态。告别节点盲猜。" />
+    <meta name="keywords" content="代理网络连通性检测, ChatGPT 节点测试, 代理速度查看, 科学上网状态查询, IP 纯净度, tonglema, 通了吗, 翻墙测试, 延迟检测" />
     <meta name="author" content="Magicx.dev" />
     <meta name="robots" content="index, follow" />
 
