--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
     <meta name="theme-color" content="#3b82f6" />
     <link rel="canonical" href="https://tonglema.com" />
     
+    <!-- Favicons -->
+    <link rel="icon" type="image/x-icon" href="/favicon/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon/android-chrome-192x192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/favicon/android-chrome-512x512.png" />
+    <link rel="manifest" href="/favicon/site.webmanifest" />
+    
     <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json">
     {
